--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="fr" ng-app="app-root">
 
 <head>
+    <base href="/">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Angular</title>
+    <title>AngularJS</title>
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
 
     <script src="node_modules/angular/angular.min.js"></script>
+    <script src="node_modules/angular-route/angular-route.min.js"></script>
     <script src="app/main.js"></script>
 
     <style>
@@ -23,40 +26,13 @@
 
 <body>
 
-    <div class="container">
+    <ng-include src="'app/views/header.html'"></ng-include>
 
-        <div ng-controller="MainController as main">
-            <h1>{{ title }}</h1>
+    <main class="container pt-3 pb-3">
+        <ng-view></ng-view>
+    </main>
 
-            <input type="text" ng-model="name">
-            <input type="text" ng-model="user.name">
-
-        </div>
-
-        <div ng-controller="SecondController">
-            <h2>{{ title }}</h2>
-
-            <input type="text" ng-model="name">
-            <input type="text" ng-model="user.name">
-
-        </div>
-
-        <div ng-controller="TodoController as todo">
-            <input type="text" ng-model="task.name" ng-keyup="add($event)">
-            <button class="btn btn-sm btn-success" ng-click="add($event)" ng-disabled="!task.name">Ajouter</button>
-
-            <p>{{ taskCount }}/{{ tasks.length }} taches validées</p>
-
-            <ul class="list-group mt-3" style="width: 240px">
-                <li class="list-group-item" ng-repeat="t in tasks">
-                    <span ng-class="{'task-done': t.done}">{{ t.name }}</span>
-                    <span class="fa fa-trash-alt" ng-click="remove($index)"></span>
-                    <input type="checkbox" ng-model="t.done" ng-click="remaining()">
-                </li>
-            </ul>
-        </div>
-
-    </div>
+    <ng-include src="'app/views/footer.html'"></ng-include>
 
 </body>
 
