--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/angular-route/angular-route.min.js"></script>
     <script src="app/main.js"></script>
+    <script src="app/controllers.js"></script>
 
     <style>
         .task-done {
