--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/angular-route/angular-route.min.js"></script>
     <script src="app/main.js"></script>
+    <script src="app/filters.js"></script>
+    <script src="app/directives.js"></script>
     <script src="app/controllers.js"></script>
     <script src="app/blog/blog.js"></script>
     <script src="app/blog/services.js"></script>
